dataset1235/2025-2/1955397009/users/3218273088/executions/3239899347_3968058195.log
== RUN (2025-08-28 12:27:19)
-- CODE: 
p=float(input(digite valor))
reais=(p*0,018)
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:20)
-- CODE: 
p=float(input(digite valor))
reais=(p*0,018)
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    reais=(p*0,018)
               ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:28:30)
-- CODE: 
p=float(input("digite valor"))
reais=(p*0.018)
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
digite valor0.02
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
digite valor0.04
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
digite valor0.14
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
digite valor0.38
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
digite valor0.34
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
digite valor0.16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:28:38)
-- CODE: 
p=float(input("digite valor"))
reais=(p*0.018)
print(round(reais,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
digite valor0.02
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
digite valor0.04
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
digite valor0.14
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
digite valor0.38
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
digite valor0.34
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
digite valor0.16
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:28:17)
-- CODE: 
p=float(input(digite valor))
reais=(p*0.018)
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 1
    p=float(input(digite valor))
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 1
    p=float(input(digite valor))
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 1
    p=float(input(digite valor))
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 1
    p=float(input(digite valor))
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 1
    p=float(input(digite valor))
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 1
    p=float(input(digite valor))
                  ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:03)
-- CODE: 
p=float(input(digite valor))
reais=p*0,018
print(round(reais,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    reais=p*0,018
              ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    reais=p*0,018
              ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    reais=p*0,018
              ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    reais=p*0,018
              ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    reais=p*0,018
              ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    reais=p*0,018
              ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
